hydroflow/tests/compile-fail/surface_forwardref_self2.stderr
error: Reached the recursion limit while resolving resolving name. Is the pipeline self-referential?
 --> tests/compile-fail/surface_forwardref_self2.rs:5:13
  |
5 |         f = f -> map(|x: usize| x) -> f;
  |             ^

error: Reached the recursion limit while resolving resolving name. Is the pipeline self-referential?
 --> tests/compile-fail/surface_forwardref_self2.rs:5:39
  |
5 |         f = f -> map(|x: usize| x) -> f;
  |                                       ^

error: `map` must have exactly 1 input(s), actually has 0.
 --> tests/compile-fail/surface_forwardref_self2.rs:5:18
  |
5 |         f = f -> map(|x: usize| x) -> f;
  |                  ^^^^^^^^^^^^^^^^^

error: `map` must have exactly 1 output(s), actually has 0.
 --> tests/compile-fail/surface_forwardref_self2.rs:5:18
  |
5 |         f = f -> map(|x: usize| x) -> f;
  |                  ^^^^^^^^^^^^^^^^^
